feat: add RCRI (Revised Cardiac Risk Index) calculator
- Implement calculateRCRI function with comprehensive risk assessment
- Add isHighRiskSurgery helper function
- Include full TypeScript types and interfaces
- Add extensive test coverage (100%)
- Update documentation with examples and clinical references
- Bump version to 1.1.0

--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "periop-calculators",
-  "version": "1.0.1",
+  "version": "1.1.0",
   "description": "Evidence-based perioperative risk assessment calculators for healthcare professionals",
   "main": "dist/index.js",
   "module": "dist/index.esm.js",
@@ -24,6 +24,8 @@
     "anesthesia",
     "risk-assessment",
     "stop-bang",
+    "rcri",
+    "revised-cardiac-risk-index",
     "healthcare",
     "clinical-tools"
   ],
